<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutHeader">

                <RelativeLayout
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_margin="10dp"
                    android:id="@+id/layoutProfilePicture">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/chyllabus_logo"
                        android:id="@+id/imageProfilePicture"
                        android:contentDescription="@string/profile_picture"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    android:layout_toRightOf="@+id/layoutProfilePicture"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="8dp"
                    android:id="@+id/layoutPersonInfo">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:id="@+id/textName"
                        android:text="@string/first_last"
                        android:textColor="@color/white"
                        android:textSize="24sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_below="@+id/textName"
                        android:id="@+id/textUniversity"
                        android:text="@string/university"
                        android:textColor="@color/light_blue"
                        android:textSize="16sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_below="@+id/textUniversity"
                        android:id="@+id/textClassYear"
                        android:text="@string/class_year"
                        android:textColor="@color/dark_blue"/>

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutHeader"
                android:id="@+id/layoutProfileInfo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:padding="8dp"
                    android:id="@+id/textMajor"
                    android:text="@string/major"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/textMajor"
                    android:layout_toRightOf="@+id/textMajor"
                    android:layout_alignTop="@+id/textMajor"
                    android:padding="8dp"
                    android:id="@+id/textYourMajor"
                    android:text="@string/your_major"
                    android:textColor="@color/white"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:padding="8dp"
                    android:layout_below="@+id/textYourMajor"
                    android:id="@+id/textBio"
                    android:text="@string/bio"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textBio"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:id="@+id/textBioBody"
                    android:text="@string/empty_bio"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:padding="8dp"
                    android:layout_below="@+id/textBioBody"
                    android:id="@+id/textClasses"
                    android:text="@string/classes"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textClasses"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:id="@+id/textClassesBody"
                    android:text="@string/empty_class_list"
                    android:textColor="@color/white"/>

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonLogout"
        android:id="@+id/buttonSettings"
        android:text="@string/action_settings"
        android:textColor="@color/white"
        android:background="@color/light_blue" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonLogout"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:background="@color/dark_blue" />

</RelativeLayout>