<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.tim.chyllabus.Profile"
    android:background="@color/black">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutHeader2">

                <RelativeLayout
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_margin="10dp"
                    android:id="@+id/layoutProfilePicture2">

                    <ImageView
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:src="@drawable/chyllabus_logo"
                        android:id="@+id/imageProfilePicture2"
                        android:contentDescription="@string/profile_picture" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="128dp"
                    android:layout_toRightOf="@+id/layoutProfilePicture2"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="8dp"
                    android:id="@+id/layoutPersonInfo2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:id="@+id/textName2"
                        android:text="@string/first_last"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_below="@+id/textName2"
                        android:id="@+id/textUniversity2"
                        android:text="@string/their_university"
                        android:textColor="@color/light_blue"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_below="@+id/textUniversity2"
                        android:id="@+id/textClassYear2"
                        android:text="@string/their_class_year"
                        android:textColor="@color/dark_blue" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layoutHeader2"
                android:id="@+id/layoutProfileInfo">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:padding="8dp"
                    android:id="@+id/textMajor2"
                    android:text="@string/major"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/textMajor2"
                    android:layout_toRightOf="@+id/textMajor2"
                    android:layout_alignTop="@+id/textMajor2"
                    android:padding="8dp"
                    android:id="@+id/textYourMajor2"
                    android:text="@string/their_major"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:padding="8dp"
                    android:layout_below="@+id/textYourMajor2"
                    android:id="@+id/textBio2"
                    android:text="@string/bio"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textBio2"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:id="@+id/textBioBody2"
                    android:text="@string/too_cool_for_bio"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:padding="8dp"
                    android:layout_below="@+id/textBioBody2"
                    android:id="@+id/textClasses2"
                    android:text="@string/classes"
                    android:textColor="@color/light_blue"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textClasses2"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:id="@+id/textClassesBody2"
                    android:text="@string/this_person_not_enrolled"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonLogout"
        android:text="@string/add_classmate"
        android:textColor="@color/white"
        android:background="@color/dark_blue" />

</RelativeLayout>
